<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youWin"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/tvVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/vs"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivYou"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/paper" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvComputer"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoText="false"
            android:text="@string/you"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>